fix rating overflow

--- a/src/styles/cropTable.scss
+++ b/src/styles/cropTable.scss
@@ -52,10 +52,10 @@
 .rating-4 {
   display: inline-block;
   background: url('~/public/images/rating_sprite.png') no-repeat;
-  overflow: hidden;
+  // overflow: hidden;
   text-indent: -9999px;
-  text-align: left;
-  position: relative;
+  // text-align: left;
+  // position: relative;
   // box-shadow: inset 0px 0px 0 3px white;
   // box-shadow: inset 0px 0px 0 1px #e3f2f4;
   width: 100px;
